<resources>

    <string name="et_nombre">¿Cual es tu nombre?</string>
    <string name="button_user">Entrar</string>
    <string name="button_invitado">Entrar sin nombre</string>

    <string name="button_play">InfantiPlay</string>

    <string name="txt_Bienvenida">Bienvenido!</string>
    <string name="txt_version">Version 0.21</string>


    <string name="app_name">proyecto dante</string>
    <string name="logotipo_name">Logotipo</string>
    <string name="button_abecedario">Abecedario</string>
    <string name="button_math">Matematicas</string>
    <string name="button_animales">Animales</string>
    <string name="button_dibujo">dibujar</string>


    <string name="txt_tv_abecedario">Presiona una letra!</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_g">G</string>
    <string name="button_h">H</string>
    <string name="button_i">I</string>
    <string name="button_j">J</string>
    <string name="button_k">K</string>
    <string name="button_l">L</string>
    <string name="button_m">M</string>
    <string name="button_n">N</string>
    <string name="button_ñ">Ñ</string>
    <string name="button_o">O</string>
    <string name="button_p">P</string>
    <string name="button_q">Q</string>
    <string name="button_r">R</string>
    <string name="button_s">S</string>
    <string name="button_t">T</string>
    <string name="button_u">U</string>
    <string name="button_v">V</string>
    <string name="button_w">W</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>

    <string name="txt_titulo_letra">Letra ?</string>
    <string name="txt_ej1">Palabra 1</string>
    <string name="txt_ej2">Palabra 2</string>
    <string name="txt_ej3">Palabra 3</string>
    <string name="txt_img_ej">Imagen ejemeplo</string>

    <string name="txt_math">Vamos a calcular!</string>
    <string name="button_sum">Sumar</string>
    <string name="button_rest">Restar</string>

    <string name="txt_vacio"> </string>

    <string name="button_cal1">1</string>
    <string name="button_cal2">2</string>
    <string name="button_cal3">3</string>
    <string name="button_cal4">4</string>
    <string name="button_cal5">5</string>
    <string name="button_cal6">6</string>
    <string name="button_cal7">7</string>
    <string name="button_cal8">8</string>
    <string name="button_cal9">9</string>
    <string name="button_cal0">0</string>
    <string name="button_cal_res">=</string>
    <string name="button_cal_borrar">Atras</string>
    <string name="button_cal_borrartodo">Borrar todo</string>

    <string name="txt_animal_gato">Gato</string>
    <string name="txt_animal_perro">Gallina</string>


</resources>