<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AbecedarioActivity">

    <TableLayout
        android:layout_width="399dp"
        android:layout_height="563dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="200dp"
        android:padding="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_a"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_b"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/button_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_c"
                android:textColor="@color/black"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/button_d"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_d"
                android:textColor="@color/black"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/button_e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_e"
                android:textColor="@color/black"
                app:backgroundTint="#9C27B0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_f"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_g"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_g"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/button_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_h"
                android:textColor="@color/black"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/button_i"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_i"
                android:textColor="@color/black"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/button_j"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_j"
                android:textColor="@color/black"
                app:backgroundTint="#9C27B0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_k"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_L"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_l"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/button_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_m"
                android:textColor="@color/black"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/button_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_n"
                android:textColor="@color/black"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/button_ñ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_ñ"
                android:textColor="@color/black"
                app:backgroundTint="#9C27B0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_o"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_o"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_p"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/button_q"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_q"
                android:textColor="@color/black"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/button_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_r"
                android:textColor="@color/black"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/button_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_s"
                android:textColor="@color/black"
                app:backgroundTint="#9C27B0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_t"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_u"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_u"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/button_v"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_v"
                android:textColor="@color/black"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/button_w"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_w"
                android:textColor="@color/black"
                app:backgroundTint="#FF5722" />

            <Button
                android:id="@+id/button_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_x"
                android:textColor="@color/black"
                app:backgroundTint="#9C27B0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_y"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_y"
                android:textColor="@color/black"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/button_z"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:onClick="teclaPresionada"
                android:padding="20sp"
                android:text="@string/button_z"
                android:textColor="@color/black"
                app:backgroundTint="#00BCD4" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txt_abcedeario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txt_tv_abecedario"
        android:textColor="#122BFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>