<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PrimerActivity">

    <EditText
        android:id="@+id/txt_nombreUser"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="234dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/grandstanderdos"
        android:gravity="center"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="254dp"
        android:layout_height="70sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="329dp"
        android:background="#44FF00"
        android:fontFamily="@font/grandstanderclean"
        android:onClick="logUsuario"
        android:text="@string/button_user"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="254dp"
        android:layout_height="70sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:background="#2155F3"
        android:fontFamily="@font/grandstanderclean"
        android:onClick="logInvitado"
        android:text="@string/button_invitado"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="476dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-108dp"
        android:contentDescription="@string/txt_img_ej"
        app:srcCompat="@drawable/infantipedialogo" />
</RelativeLayout>