<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LetraActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_letra_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/grandstanderdos"
                android:gravity="center"
                android:text="@string/txt_titulo_letra"
                android:textColor="#9EFF0000"
                android:textColorHint="#000000"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/txt_letra_ej1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70sp"
                android:fontFamily="@font/grandstanderdos"
                android:gravity="center"
                android:text="@string/txt_ej1"
                android:textColor="#002696"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/img_ej1"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:contentDescription="@string/txt_img_ej"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_vacio"
                android:onClick="repSon1"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
                app:tint="#000000" />

            <TextView
                android:id="@+id/txt_letra_ej2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:fontFamily="@font/grandstanderdos"
                android:gravity="center"
                android:text="@string/txt_ej2"
                android:textColor="#FF3223"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/img_ej2"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:contentDescription="@string/txt_img_ej"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_vacio"
                android:onClick="repSon2"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
                app:tint="#000000" />

            <TextView
                android:id="@+id/txt_letra_ej3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:fontFamily="@font/grandstanderdos"
                android:gravity="center"
                android:text="@string/txt_ej3"
                android:textColor="#009688"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/img_ej3"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:contentDescription="@string/txt_img_ej"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_vacio"
                android:onClick="repSon3"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
                app:tint="#000000" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>